refactor(evidence-timeline): explicit margin for h1

--- a/src/lib/evidence-timeline.css
+++ b/src/lib/evidence-timeline.css
@@ -96,6 +96,7 @@
 }
 
 #evidence-timeline .evidence > .header > h1 {
+  margin: 0.8rem 0rem;
   grid-column: title;
   display: inline-block;
   color: var(--main-color);
