--- a/src/lib/evidence-timeline.css
+++ b/src/lib/evidence-timeline.css
@@ -57,7 +57,7 @@
 }
 
 #evidence-timeline > .toggle:checked + .lbl-toggle + .collapsible-content {
-  max-height: 100vh;
+  max-height: 100%;
 }
 
 #evidence-timeline > .toggle + .lbl-toggle + .collapsible-content {
@@ -92,7 +92,7 @@
   grid: 1fr / [title] 20fr [etherscan] 3fr [footer-end];
   border-bottom: 1px solid;
   border-color: #e8e8e8;
-  margin: 0rem 2rem;
+  margin: 0rem 1.5rem;
 }
 
 #evidence-timeline .evidence .header > a > svg {
@@ -111,7 +111,7 @@
 }
 
 #evidence-timeline .evidence p {
-  padding: 0rem 2rem;
+  padding: 0rem 1.5rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
@@ -119,6 +119,7 @@
 #evidence-timeline .evidence .temp > span.sender {
   color: var(--main-color);
   font-weight: bold;
+  line-height: 2rem;
 }
 
 #evidence-timeline .evidence .temp > span.timestamp {
@@ -135,14 +136,14 @@
     grid: 1fr / [title] 20fr [etherscan] 3fr [footer-end];
     border-bottom: 1px solid;
     border-color: #e8e8e8;
-    margin: 0rem 2rem;
+    margin: 0rem 1.5rem;
   }
 
   #evidence-timeline .evidence > .footer {
     display: grid;
     grid: 1fr / [submitInfo] 20fr [link] 3fr [footer-end];
 
-    padding: 2rem;
+    padding: 1.5rem;
     background-color: var(--second-color);
     border-bottom-left-radius: 12px;
     border-bottom-right-radius: 12px;
@@ -170,7 +171,7 @@
     display: grid;
     grid: 1fr / [link] 1fr [footer-end];
 
-    padding: 2rem;
+    padding: 1.5rem;
     background-color: var(--second-color);
     border-bottom-left-radius: 12px;
     border-bottom-right-radius: 12px;
