refactor(evidence-timeline): accept strings for supportingSide codes

--- a/src/lib/evidence-timeline.css
+++ b/src/lib/evidence-timeline.css
@@ -205,6 +205,10 @@
   align-self: end;
 }
 
+#evidence-timeline div.evidence-side > svg {
+  vertical-align: sub;
+}
+
 #evidence-timeline .evidence > .footer > a > svg {
   grid-column: link;
   float: right;
