--- a/src/lib/evidence-timeline.module.css
+++ b/src/lib/evidence-timeline.module.css
@@ -1,11 +1,27 @@
 :root {
   --main-color: #4d00b4;
   --second-color: #f5f1fd;
-  font-family: Roboto;
+  --third-color: #009aff;
+  font-family: Roboto, sans-serif;
+  font-size: 16px;
+}
+
+button {
+  padding: 0.375rem 0.75rem;
+}
+
+input,
+textarea {
+  border-radius: 0.25rem;
+  border: 1px solid #ced4da;
+  line-height: 1.5;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  color: var(--main-color);
 }
 
 button:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 hr {
@@ -16,7 +32,7 @@ hr {
 .evidence-button {
   display: block;
   margin: auto;
-  background-color: #009aff;
+  background-color: var(--third-color);
   color: white;
   padding: 0.5rem 1.5rem;
   border-radius: 3px;
@@ -276,10 +292,15 @@ div > div > .divider {
 .modal-header {
   background-color: var(--main-color);
   color: white;
-  height: 3rem;
   margin: 0;
   text-align: center;
   vertical-align: middle;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+
+.modal-header h1 {
+  font-size: 1.32rem;
 }
 
 .modal {
@@ -303,7 +324,7 @@ div > div > .divider {
   /* margin: -200px 0 0 -200px; */
 
   background: white;
-  box-shadow: 0 0 60px 10px rgba(0, 0, 0, 0.9);
+  border-radius: 12px;
 }
 .closed {
   display: none;
@@ -315,15 +336,15 @@ div > div > .divider {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 50;
+  z-index: 5;
 
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.4);
 }
 .modal-guts {
   display: grid;
   grid-gap: 1rem;
   overflow: auto;
-  padding: 1rem 2.5rem 1rem 1rem;
+  padding: 1rem 1rem 1rem 1rem;
 }
 
 .modal .close-button {
@@ -338,8 +359,14 @@ div > div > .divider {
   font-size: 1.3rem;
 }
 
-#submit-button {
+.submit-button {
   display: inline-block;
+  width: fit-content;
+  justify-self: right;
+  background-color: var(--third-color);
+  border: none;
+  color: white;
+  font-size: 1rem;
 }
 
 .open-button {
@@ -365,4 +392,51 @@ div > div > .divider {
   transform: translate(-50%, -200%);
   -webkit-transition: -webkit-transform 200ms ease-out;
   transition: transform 200ms ease-out;
+}
+
+.dropzone {
+  border-style: dashed;
+  border-color: var(--main-color);
+  background-color: #f5f1fd;
+  color: var(--main-color);
+  text-align: center;
+  font-size: 1.32rem;
+  font-weight: normal;
+}
+
+.dropzone {
+  margin-top: 0.2rem;
+}
+
+.dropzone p {
+  font-size: 1.25rem;
+  font-weight: normal;
+  margin: 0;
+  padding: 2rem;
+}
+
+.evidenceTitle,
+.evidenceDescription {
+  display: grid;
+}
+
+.evidenceTitle label,
+.evidenceDescription label,
+.dropzoneDiv label {
+  margin-bottom: 0.2rem;
+  color: var(--main-color);
+}
+
+.evidenceSide {
+  display: block;
+}
+
+.evidenceSide > div {
+  display: inline-flex;
+  padding-right: 1rem;
+}
+
+input[type="radio"] {
+  transform: scale(1.4);
+  margin-right: 0.5rem;
 }
