--- a/src/lib/evidence-timeline.module.css
+++ b/src/lib/evidence-timeline.module.css
@@ -8,6 +8,11 @@
 
 button {
   padding: 0.375rem 0.75rem;
+  border-radius: 3px;
+}
+
+button:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 input,
@@ -18,10 +23,6 @@ textarea {
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   color: var(--main-color);
-}
-
-button:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 hr {
@@ -306,19 +307,15 @@ div > div > .divider {
 .modal {
   /* This way it could be display flex or grid or whatever also. */
   display: grid;
-
+  position: fixed;
+  top: calc(50vh - 240px);
+  left: 10vw;
   /* Probably need media queries here */
   width: 80vw;
-
-  position: fixed;
-
+  height: 480px;
   z-index: 100;
 
-  left: 50%;
-  top: 50%;
-
   /* Use this for centering if unknown width/height */
-  transform: translate(-50%, -50%);
 
   /* If known, negative margins are probably better (less chance of blurry text). */
   /* margin: -200px 0 0 -200px; */
@@ -381,17 +378,8 @@ div > div > .divider {
   font-size: 1.5rem;
 }
 
-.modal-container {
-  position: fixed;
-  background-color: #fff;
-  width: 70vw;
-  left: 50%;
-  border-radius: 0.5rem;
-  -webkit-transform: translate(-50%, -200%);
-  -ms-transform: translate(-50%, -200%);
-  transform: translate(-50%, -200%);
-  -webkit-transition: -webkit-transform 200ms ease-out;
-  transition: transform 200ms ease-out;
+.modalContainer {
+  margin: 0 auto;
 }
 
 .dropzone {
