--- a/src/lib/evidence-timeline.module.css
+++ b/src/lib/evidence-timeline.module.css
@@ -1,3 +1,5 @@
+@import "common.css";
+
 :root {
   --main-color: #4d00b4;
   --second-color: #f5f1fd;
@@ -10,10 +12,13 @@ button {
   padding: 0.375rem 0.75rem;
   border: 1px solid transparent;
   border-radius: 3px;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 2.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 button:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  cursor: pointer;
 }
 
 input,
@@ -307,6 +312,8 @@ div > div > .divider {
 
 .modal-header h1 {
   font-size: 1.32rem;
+  font-weight: normal;
+  padding: 0.75rem 1.25rem;
 }
 
 .modal {
@@ -365,7 +372,6 @@ div > div > .divider {
   width: fit-content;
   justify-self: right;
   background-color: var(--third-color);
-  border: none;
   color: white;
   font-size: 1rem;
 }
