--- a/src/lib/evidence-timeline.module.css
+++ b/src/lib/evidence-timeline.module.css
@@ -304,6 +304,7 @@ div > div > .divider {
   background-color: var(--main-color);
   color: white;
   margin: 0;
+  padding: 1rem;
   text-align: center;
   vertical-align: middle;
   border-top-left-radius: 12px;
