--- a/src/lib/evidence-timeline.module.css
+++ b/src/lib/evidence-timeline.module.css
@@ -293,7 +293,7 @@ div > div > .divider {
   color: white;
   text-align: center;
   margin: auto;
-  width: max-content;
+  max-width: max-content;
   padding: 0.5rem 1.5rem;
   border-radius: 300px;
 }
