fix(evidence-timeline): evidence description whitespace:pre-wrap

--- a/src/lib/evidence-timeline.module.css
+++ b/src/lib/evidence-timeline.module.css
@@ -162,6 +162,7 @@ label {
 .evidence pre {
   margin: 1rem 1.5rem;
   overflow: auto;
+  white-space: pre-wrap;
 }
 
 .evidence .temp > span.sender {
