--- a/src/lib/evidence-timeline.module.css
+++ b/src/lib/evidence-timeline.module.css
@@ -296,10 +296,11 @@ div > div > .divider {
   margin: auto;
   max-width: max-content;
   padding: 0.5rem 1.5rem;
-  border-radius: 300px;
+  border-radius: 16px;
 }
 
-.event p {
+.event p,
+.event pre {
   margin: 0;
 }
 
